picture text component fixed picture alignement

--- a/src/components/PictureText.css
+++ b/src/components/PictureText.css
@@ -1,6 +1,11 @@
+.container{
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
 .Category{
     font-size: 1.6em;
-    padding-bottom: 0.2em;
     color: lightgrey;
     font-weight: bold;
 }
@@ -8,7 +13,6 @@
 .Title{
     font-weight: Bold;
     font-size: 3em;
-    padding-bottom: 0.3em;
     max-width: 600px;
 }
 
@@ -18,5 +22,6 @@
 }
 
 .Img{
-
+    padding-left: 3em;
+    padding-top: 3.8em;
 }
